2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed value of 1 week
	period.

	* * include/functions_reporting.php: Fixed a bug in SLA calculation
	that affects small periods of time (less than 24 hours) due to data
	compression in the database.

	* * include/functions.php: Added get_events_in_group() to get the
	events of a group in a period of time. It handles group All properly.

2008-11-07  Sancho Lerena <slerena@gmail.com>

	* install.php: Installer create a bad homeurl variable, should be
	like /pandora_console, not http://localhost/pandora_console

2009-11-05  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/languages/pt_BR.mo, include/languages/fr.po,
          include/languages/uk.mo, include/languages/ro.mo,   
          include/languages/ca.po, include/languages/sv.po,   
          include/languages/de.po, include/languages/zh_TW.po,
          include/languages/hi.po, include/languages/zh_CN.po,
          include/languages/fr.mo, include/languages/te.po,   
          include/languages/eu.po,  include/languages/hu.po,  
          include/languages/ca.mo, include/languages/de.mo,   
          include/languages/sv.mo, include/languages/ru.po, 
          include/languages/zh_TW.mo, include/languages/hi.mo,
          include/languages/zh_CN.mo, include/languages/gl.po,
          include/languages/te.mo, include/languages/eu.mo,   
          include/languages/hu.mo,  include/languages/pl.po,  
          include/languages/it.po, include/languages/sl.po,   
          include/languages/ru.mo, include/languages/pt.po, 
          include/languages/ast.po, include/languages/gl.mo: Updated
          translations from rosetta: thanks to all contributors.

2008-11-04  Jorge Gonzalez  <jorgegonz@artica.es>                              

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
          translation.
                       
2008-10-31  Jorge Gonzalez  <jorgegonz@artica.es>
