@@ -1,4 +1,13 @@
-2008-11-07  Esteban Sanchez  <estebans@artica.es>
+2008-11-08  Esteban Sanchez  <estebans@artica.es>
+
+	* godmode/reporting/reporting_builder.php: Fixed a notice using
+	get_db_value() which was replaced by get_db_sql().
+
+	* include/functions_reporting.php: Fixed an error on
+	get_fired_alerts_reporting_table() since id_alert field in
+	talerta_agente_modulo is not reliable.
+
+2008-11-08  Esteban Sanchez  <estebans@artica.es>
 
 	* godmode/reporting/reporting_builder.php: Fixed value of 1 week
 	period.
